[package]
name = "introspectme"
version = "0.0.1"
edition = "2021"
description = "GraphQL schema reconstruction via field suggestion error analysis"
license-file = "LICENSE"
repository = "https://github.com/bountyyfi/IntrospectMe"
homepage = "https://github.com/bountyyfi/IntrospectMe"
keywords = ["graphql", "security", "introspection", "schema", "pentest"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "introspectme"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
async-recursion = "1"
indicatif = "0.17"

# PoC mode dependencies
actix-web = { version = "4", optional = true }
async-graphql = { version = "7", optional = true }
async-graphql-actix-web = { version = "7", optional = true }

[features]
default = ["poc"]
poc = ["actix-web", "async-graphql", "async-graphql-actix-web"]
